--- a/rpm/SPECS/Makefile
+++ b/rpm/SPECS/Makefile
@@ -300,7 +300,7 @@ $(SRCPATH)/$(BASE_SRC):
 base:	nginx.spec $(SRCPATH)/$(BASE_SRC)
 	@echo "===> Building base package" ; \
 	$(SHELL) -c "time -p rpmbuild -ba nginx.spec" && \
-	ln -s ../BUILD/nginx-$(BASE_VERSION)/objs base
+	ln -s ../BUILD/openresty-$(BASE_VERSION)/objs base
 
 nginx.spec:
 	@echo "===> Creating $@"
@@ -316,7 +316,7 @@ nginx.spec:
 module-%: nginx-module-%.spec $(SRCPATH)/$(BASE_SRC)
 	@echo "===> Building nginx-$@ package" ; \
 	$(SHELL) -c "time -p rpmbuild -ba nginx-$@.spec" && \
-	ln -s ../BUILD/nginx-$@-$(BASE_VERSION)/objs $@
+	ln -s ../BUILD/openresty-$@-$(BASE_VERSION)/objs $@
 
 nginx-module-%.spec:
 	@echo "===> Creating $@"
