--- a/rpm/SPECS/nginx-module.spec.in
+++ b/rpm/SPECS/nginx-module.spec.in
@@ -55,6 +55,8 @@ Requires: nginx == %{?epoch:%{epoch}:}%%MAIN_VERSION%%-%%MAIN_RELEASE%%%{?dist}.
 %description
 nginx %%SHORT_SUMMARY%%.
 
+%define orprefix      %{_usr}/local/openresty
+
 %if 0%{?suse_version} || 0%{?amzn}
 %debug_package
 %endif
@@ -108,7 +110,7 @@ done
 
 %files
 %defattr(-,root,root)
-%{_libdir}/nginx/modules/*
+%{orprefix}/nginx/modules/*
 %dir %{_datadir}/doc/%%NAME%%
 %{_datadir}/doc/%%NAME%%/*
 %%MODULE_FILES%%
