--- a/rpm/SPECS/nginx-module.spec.in
+++ b/rpm/SPECS/nginx-module.spec.in
@@ -65,6 +65,9 @@ nginx %%SHORT_SUMMARY%%.
 %define BASE_CONFIGURE_ARGS $(echo "%%BASE_CONFIGURE_ARGS%%")
 %define MODULE_CONFIGURE_ARGS $(echo "%%MODULE_CONFIGURE_ARGS%%")
 
+%define orprefix            %{_usr}/local/openresty
+
+
 %prep
 %setup -qcTn %{name}-%{main_version}
 tar --strip-components=1 -zxf %{SOURCE0}
@@ -91,16 +94,16 @@ make %{?_smp_mflags}
 %install
 cd %{bdir}
 %{__rm} -rf $RPM_BUILD_ROOT
-%{__mkdir} -p $RPM_BUILD_ROOT%{_datadir}/doc/%%NAME%%
+%{__mkdir} -p $RPM_BUILD_ROOT%{orprefix}/doc/%%NAME%%
 %{__install} -m 644 -p %{SOURCE1} \
-    $RPM_BUILD_ROOT%{_datadir}/doc/%%NAME%%/
+    $RPM_BUILD_ROOT%{orprefix}/doc/%%NAME%%/
 
 %%MODULE_PREINSTALL%%
 
 %{__mkdir} -p $RPM_BUILD_ROOT%{_libdir}/nginx/modules
 for so in `find %{bdir}/build/nginx*/objs/ -maxdepth 1 -type f -name "*.so"`; do
 %{__install} -m755 $so \
-   $RPM_BUILD_ROOT%{_libdir}/nginx/modules/
+   $RPM_BUILD_ROOT%{orprefix}/nginx/modules/
 done
 
 %clean
@@ -108,7 +111,7 @@ done
 
 %files
 %defattr(-,root,root)
-%{_libdir}/nginx/modules/*
+%{orprefix}/nginx/modules/*
 %dir %{_datadir}/doc/%%NAME%%
 %{_datadir}/doc/%%NAME%%/*
 %%MODULE_FILES%%
