--- a/rpm/SPECS/nginx-module.spec.in
+++ b/rpm/SPECS/nginx-module.spec.in
@@ -100,7 +100,7 @@ cd %{bdir}
 
 %%MODULE_PREINSTALL%%
 
-%{__mkdir} -p $RPM_BUILD_ROOT%{_libdir}/nginx/modules
+%{__mkdir} -p $RPM_BUILD_ROOT%{orprefix}/nginx/modules
 for so in `find %{bdir}/build/nginx*/objs/ -maxdepth 1 -type f -name "*.so"`; do
 %{__install} -m755 $so \
    $RPM_BUILD_ROOT%{orprefix}/nginx/modules/
