--- a/rpm/SPECS/nginx-module.spec.in
+++ b/rpm/SPECS/nginx-module.spec.in
@@ -27,14 +27,14 @@ Epoch: %{epoch}
 %%MODULE_DEFINITIONS%%
 
 %define main_version %%MAIN_VERSION%%
-%define main_release %%MAIN_RELEASE%%%{?dist}.ngx
+%define main_release %%MAIN_RELEASE%%%{?dist}
 
 %define bdir %{_builddir}/%{name}-%{main_version}
 
 Summary: %%SUMMARY%%
 Name: %%NAME%%
 Version: %%VERSION_PREFIX%%%%VERSION%%
-Release: %%RELEASE%%%{?dist}.ngx
+Release: %%RELEASE%%%{?dist}
 Vendor: %%MODULE_PACKAGE_VENDOR%%
 URL: %%MODULE_PACKAGE_URL%%
 Group: %{_group}
