--- a/rpm/SPECS/Makefile
+++ b/rpm/SPECS/Makefile
@@ -265,7 +265,7 @@ BASE_CONFIGURE_ARGS=\
     --with-http_gunzip_module \
     --with-threads \
     --with-luajit-xcflags='-DLUAJIT_NUMMODE=2 -DLUAJIT_ENABLE_LUA52COMPAT' \
-    --with-dtrace-probes \
+    --with-dtrace-probes
 
 export CR=\\n
 
