--- a/rpm/SPECS/nginx-module.spec.in
+++ b/rpm/SPECS/nginx-module.spec.in
@@ -59,8 +59,8 @@ openresty %%SHORT_SUMMARY%%.
 %debug_package
 %endif
 
-%define WITH_CC_OPT ""
-%define WITH_LD_OPT ""
+%define WITH_CC_OPT
+%define WITH_LD_OPT 
 
 %define BASE_CONFIGURE_ARGS $(echo "%%BASE_CONFIGURE_ARGS%%")
 %define MODULE_CONFIGURE_ARGS $(echo "%%MODULE_CONFIGURE_ARGS%%")
